<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Portfolio 0</string>
    <string name="app_name_1">Spotify Streamer</string>
    <string name="app_name_2">SCORES APP</string>
    <string name="app_name_3">LIBRARY APP</string>
    <string name="app_name_4">Build It Bigger</string>
    <string name="app_name_5">XYZ Reader</string>
    <string name="final_app_name">Capstone</string>
    <string name="default_toast">This app will launch my </string>

</resources>
